@@ -15,6 +15,7 @@ Changes in JMurmel-1.4 relative to JMurmel-1.3.1
    string-replace, string-split, string-join
  * mlib: added gethash, remhash, maphash, "(setf (gethash..."
 
+ * added Windows slim package (needs an installed Java8+) c/o Launch4j
  * added linux and Windows native executables c/o GraalVM
 
 
